[gd_scene load_steps=2 format=3 uid="uid://hnvqfomufyjs"]

[ext_resource type="Script" uid="uid://dgp301qu1stl0" path="res://hud.gd" id="1_37p78"]

[node name="TopBar" type="CanvasLayer" node_paths=PackedStringArray("date_label", "resources_label")]
script = ExtResource("1_37p78")
date_label = NodePath("HBoxContainer/DateContainer/DateLabel")
resources_label = NodePath("HBoxContainer/ResourcesContainer/ResourcesLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -617.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="DateContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="DateLabel" type="Label" parent="HBoxContainer/DateContainer"]
layout_mode = 2
text = "DATE: 01/01/2025"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResourcesContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ResourcesLabel" type="Label" parent="HBoxContainer/ResourcesContainer"]
layout_mode = 2
text = "BRL: R$0.0B"

[node name="SpeedControls" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="HBoxContainer/SpeedControls"]
layout_mode = 2
text = "Pause"

[node name="Speed1xButton" type="Button" parent="HBoxContainer/SpeedControls"]
layout_mode = 2
text = "1x"

[node name="Speed2xButton" type="Button" parent="HBoxContainer/SpeedControls"]
layout_mode = 2
text = "2x"

[node name="Speed5xButton" type="Button" parent="HBoxContainer/SpeedControls"]
layout_mode = 2
text = "5x"

[connection signal="pressed" from="HBoxContainer/SpeedControls/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SpeedControls/Speed1xButton" to="." method="_on_speed_1x_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SpeedControls/Speed2xButton" to="." method="_on_speed_2x_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SpeedControls/Speed5xButton" to="." method="_on_speed_5x_button_pressed"]
